<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Soft authorization-->
    <string name="authorization_permission_title_text">Privatsphäre-Einstellungen sicher speichern mit netID</string>
    <string name="authorization_permission_legal_info">Indem Sie Ihre Einwilligung erteilen, geben Sie uns die Erlaubnis, Sie beim Besuch dieses Webangebots als netID-Nutzer zu identifizieren und Ihre ID für die in unserer Datenschutzerklärung aufgelisteten Zwecke zu verwenden. Durch Nutzung von %1$s kann Ihnen der Cookie-Layer für dieses und andere teilnehmende Webangebote dann seltener angezeigt werden.</string>
    <string name="authorization_permission_legal_info_fixed">Sie können Ihre Einwilligung jederzeit über Ihr netID Privacy Center bei %1$s %2$s einsehen, widerrufen und verwalten.</string>
    <string name="authorization_permission_agree_and_continue_with_net_id">Zustimmen mit netID</string>
    <string name="authorization_permission_close">Schließen</string>
    <string name="authorization_permission_net_id">netID</string>
    <string name="authorization_permission_choose_account_provider">(anderen netID Account Anbieter hier auswählen)</string>
    <string name="authorization_permission_netid_privacycenter">netID Privacy Center</string>

    <!-- Hard authorization-->
    <string name="authorization_login_title_text">Login mit netID</string>
    <string name="authorization_login_login_text">Login mit Ihrer E-Mail App</string>
    <string name="authorization_login_legal_info">Indem Sie Ihre Einwilligung erteilen, geben Sie uns die Erlaubnis, Sie beim Besuch dieses Webangebots als netID-Nutzer zu identifizieren und Ihre ID für die in unserer Datenschutzerklärung aufgelisteten Zwecke zu verwenden. Durch Nutzung von %1$s kann Ihnen der Cookie-Layer für dieses und andere teilnehmende Webangebote dann seltener angezeigt werden. Sie können Ihre Einwilligung jederzeit über Ihr netID Privacy Center bei %1$s %2$s einsehen, widerrufen und verwalten.</string>
    <string name="authorization_login_agree_and_continue_with_net_id">Zustimmen und weiter mit netID</string>
    <string name="authorization_login_continue">Login mit %1$s</string>
    <string name="authorization_login_continue_other">Weitere Anmeldeoptionen</string>
    <string name="authorization_login_net_id">netID</string>
    <string name="authorization_login_choose_partner">(anderen Partner hier auswählen)</string>


    <!-- Content descriptions -->
    <string name="authorization_logo_content_description">netID logo</string>
    <string name="authorization_cell_use_app_text">%1$s App verwenden</string>
</resources>