<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/authorization_outer_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentAuthorizationTitleContainerLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/fragmentAuthorizationLogoImageView"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:contentDescription="@string/authorization_logo_content_description"
            android:scaleType="fitStart"
            android:src="@drawable/ic_no_app_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragmentAuthorizationButtonClose"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/authorization_permission_close"
            android:scaleType="fitCenter"
            app:icon="@drawable/ic_baseline_close_24"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:backgroundTint="@color/authorization_close_button_background_color"
            app:strokeColor="#AAAAAA"
            app:rippleColor="#AAAAAA"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/fragmentAuthorizationDivider"
        style="@style/Divider"
        android:layout_marginTop="@dimen/authorization_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentAuthorizationTitleContainerLayout" />

    <TextView
        android:id="@+id/fragmentAuthorizationTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/authorization_vertical_margin"
        android:gravity="start"
        android:text="@string/authorization_permission_title_text"
        android:textColor="@color/authorization_title_text_color"
        android:textSize="@dimen/authorization_title_permission_text_size"
        android:textFontWeight="600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentAuthorizationDivider" />

    <TextView
        android:id="@+id/fragmentAuthorizationLegalInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="@dimen/authorization_vertical_margin"
        android:layout_marginEnd="22dp"
        android:gravity="start"
        android:text="@string/authorization_permission_legal_info"
        android:textColor="@color/authorization_legal_info_text_color"
        android:textSize="@dimen/authorization_legal_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentAuthorizationTitleTextView" />

    <LinearLayout
        android:id="@+id/fragmentAuthorizationButtonContainerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/authorization_vertical_margin"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentAuthorizationLegalInfoTextView">

        <ListView
            android:id="@+id/fragmentAuthorizationAppCellContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/netid_app_cell" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragmentAuthorizationButtonAgreeAndContinue"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:letterSpacing="@dimen/authorization_button_letter_spacing"
            android:text="@string/authorization_permission_agree_and_continue_with_net_id"
            android:textAllCaps="false"
            android:textSize="@dimen/authorization_button_text_size"
            android:textColor="@color/authorization_agree_text_color"
            app:icon="@drawable/ic_netid_logo_small"
            app:iconSize="20dp"
            app:iconTint="@null"
            app:iconPadding="-24dp"
            app:backgroundTint="@color/authorization_agree_button_color"
            app:cornerRadius="@dimen/authorization_button_corner_radius"
            app:strokeColor="@color/authorization_close_button_color"
            app:strokeWidth="@dimen/authorization_close_button_stroke_width"
            app:rippleColor="@color/authorization_close_button_color" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>